src/css/main.css
/*google fonts*/
@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;700&display=swap");
:root {
  --white: #fff;
  --light-blue: #8db3e5;
  --dark-grey: #7f8083;
  --dark-blue: #04142c;
  --lime-light: #6cd4c4;
  --light-grey: #a4a4bc;
}
.dark-mode {
  --text-color: var(--white);
  --bg-color: var(--dark-blue);
  --link-color: rgba(255, 255, 255, 0.9);
}
.light-mode {
  --text-color: var(--dark-blue);
  --bg-color: var(var(--light-grey));
}
body {
  font-family: "Fira Sans", sans-serif;
}
body,
.container-fluid,
.current-color {
  background-color: var(--bg-color);
  color: var(--text-color);
}
.contenedor {
  width: 50%;
  padding-top: 50px;
}
.code {
  position: relative; /* Para posicionar el pseudoelemento */
  background: #fbf7ec;
  padding: 15px;
  border-radius: 10px 0 10px 10px;
}
.code::before {
  --textContent: "Copiar";
  content: var(--textContent);
  position: absolute;
  top: 0;
  right: 0;
  padding: 0.25em 0.5em;
  font-size: 80%;
  border: 1px solid;
  cursor: pointer;
}
.code.copied::before {
  --textContent: "Copiado";
  color: green;
}
.margen {
  margin-top: 50px;
  margin-bottom: 50px;
}
footer {
  background: #a2a7bd;
  padding: 35px;
  padding-bottom: 0;
}
footer a {
  text-decoration: none;
  color: white;
}
.fab {
  font-size: 2em;
  color: lightgray;
  padding: 5px;
}
.fab:hover {
  color: white;
}
h3 {
  text-align: center;
}
.imgban {
  width: 50%;
  height: 50%;
}
.icon-theme {
  text-align: right;
  position: relative;
}
/* Se usa como capa superpuesta al ícono y así solo escuchar un elemento por javascript */
.icon-theme::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
.icon-theme:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

/* Small devices (landscape phones, less than 768px)*/
@media (max-width: 767.98px) {
  .contenedor {
    width: 100%;
  }
  footer {
    font-size: 0.8rem;
  }
  .imgban {
    width: 100%;
    height: 100%;
  }
}

#nav-link {
  color: var(--link-color);
}

#navbar-menu-default {
  background-image: url(../img/menu/menu-default.svg);
}

#navbar-menu-darkmode {
  background-image: url(../img/menu/menu-light.svg);
}

#navbar-toggler {
  border: none;
}

